fix(events): prevent wrapping of event date

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,6 +184,7 @@ a:hover {
 
 .content .events th {
   text-align: left;
+  white-space: nowrap;
 }
 
 .content .events td {
